Bug #38159: Function parsing problem generates misleading error message

Added a more detailed error message on calling an ambiguous missing function.