sql/sql_derived.cc
@@ -148,6 +148,7 @@ exit:
     if (orig_table_list->view)
     {
       if (thd->net.last_errno == ER_BAD_FIELD_ERROR ||
+          thd->net.last_errno == ER_FUNC_INEXISTENT_NAME_COLLISION ||
           thd->net.last_errno == ER_SP_DOES_NOT_EXIST)
       {
         thd->clear_error();
